--- a/styles/partials/_script-animations.scss
+++ b/styles/partials/_script-animations.scss
@@ -1,11 +1,57 @@
-.anim-left {
+.anim-left-0 {
+    animation: slide-right 1500ms cubic-bezier(.47,.01,.48,1) 1;
+
+}
+.anim-right-0 {
+    animation: slide-right 1500ms cubic-bezier(.47,.01,.48,1) 1;
+
+}
+
+.anim-left-1 {
     animation: rotation-left 1500ms cubic-bezier(.47,.01,.48,1) 1;
 
 }
-.anim-right {
+.anim-right-1 {
     animation: rotation-right 1500ms cubic-bezier(.47,.01,.48,1) 1;
 
 }
+.anim-left-2 {
+    animation: hide-n-show 1500ms cubic-bezier(.47,.01,.48,1) 1;
+
+}
+.anim-right-2 {
+    animation: hide-n-show 1500ms cubic-bezier(.47,.01,.48,1) 1;
+
+}
+
+.anim-left-3 {
+    animation: float-up 1500ms cubic-bezier(.47,.01,.48,1) 1;
+
+}
+.anim-right-3 {
+    animation: float-up 1500ms cubic-bezier(.47,.01,.48,1) 1;
+
+}
+@keyframes float-up {
+    0% {
+
+    }
+    20% {
+        transform:  translateY(-100%) scale(0.8);
+    }
+    50% {
+        transform: translateY(-250%) scale(0.3);
+    }
+    70% {
+        transform:  translateY(-100%) scale(0.8);
+    }
+    
+    100% {
+        transform: translateY(0%) scale(1);
+    }
+}
+
+
 @keyframes hide-n-show {
     0% {
         opacity: 1;
@@ -16,6 +62,78 @@
     100% {
         opacity: 1;
     }
+}
+@keyframes slide-right {
+    0% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+    20% {
+        opacity: 0;
+    }
+    40% {
+        transform: translateX(200%);
+        
+        
+    }
+    45% {
+
+        transform: translateX(80%);
+        opacity: 0;
+    }
+    50% {
+        transform: translateX(-200%);
+        opacity: 0;
+    }
+    60% {
+        transform: translateX(-200%);
+        
+    }
+    80% {
+        
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+
+}
+@keyframes slide-left {
+    0% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+    20% {
+        opacity: 0;
+    }
+    40% {
+        transform: translateX(-200%);
+        opacity: 0;
+        
+    }
+    45% {
+
+        transform: translateX(-80%);
+        opacity: 0;
+    }
+    50% {
+        transform: translateX(200%);
+        opacity: 0;
+    }
+    60% {
+        transform: translateX(200%);
+        opacity: 0;
+    }
+    80% {
+        
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+
 }
 
 @keyframes rotation-right {
