--- a/styles/style.css
+++ b/styles/style.css
@@ -162,14 +162,86 @@
   z-index: -1;
 }
 
-.anim-left {
+.anim-left-0 {
+  -webkit-animation: slide-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: slide-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+.anim-right-0 {
+  -webkit-animation: slide-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: slide-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+.anim-left-1 {
   -webkit-animation: rotation-left 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
           animation: rotation-left 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
 }
 
-.anim-right {
+.anim-right-1 {
   -webkit-animation: rotation-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
           animation: rotation-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+.anim-left-2 {
+  -webkit-animation: hide-n-show 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: hide-n-show 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+.anim-right-2 {
+  -webkit-animation: hide-n-show 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: hide-n-show 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+.anim-left-3 {
+  -webkit-animation: float-up 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: float-up 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+.anim-right-3 {
+  -webkit-animation: float-up 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: float-up 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+}
+
+@-webkit-keyframes float-up {
+  0% {
+  }
+  20% {
+    -webkit-transform: translateY(-100%) scale(0.8);
+            transform: translateY(-100%) scale(0.8);
+  }
+  50% {
+    -webkit-transform: translateY(-250%) scale(0.3);
+            transform: translateY(-250%) scale(0.3);
+  }
+  70% {
+    -webkit-transform: translateY(-100%) scale(0.8);
+            transform: translateY(-100%) scale(0.8);
+  }
+  100% {
+    -webkit-transform: translateY(0%) scale(1);
+            transform: translateY(0%) scale(1);
+  }
+}
+
+@keyframes float-up {
+  0% {
+  }
+  20% {
+    -webkit-transform: translateY(-100%) scale(0.8);
+            transform: translateY(-100%) scale(0.8);
+  }
+  50% {
+    -webkit-transform: translateY(-250%) scale(0.3);
+            transform: translateY(-250%) scale(0.3);
+  }
+  70% {
+    -webkit-transform: translateY(-100%) scale(0.8);
+            transform: translateY(-100%) scale(0.8);
+  }
+  100% {
+    -webkit-transform: translateY(0%) scale(1);
+            transform: translateY(0%) scale(1);
+  }
 }
 
 @-webkit-keyframes hide-n-show {
@@ -192,6 +264,158 @@
     opacity: 0;
   }
   100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slide-right {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+  }
+  45% {
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+    opacity: 0;
+  }
+  60% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-right {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+  }
+  45% {
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+    opacity: 0;
+  }
+  60% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+    opacity: 0;
+  }
+  45% {
+    -webkit-transform: translateX(-80%);
+            transform: translateX(-80%);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+    opacity: 0;
+  }
+  60% {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+    opacity: 0;
+  }
+  45% {
+    -webkit-transform: translateX(-80%);
+            transform: translateX(-80%);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+    opacity: 0;
+  }
+  60% {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
     opacity: 1;
   }
 }
@@ -429,6 +653,7 @@
 
 html {
   height: 800px;
+  overflow-x: hidden;
 }
 
 body {
