--- a/styles/partials/_script-animations.scss
+++ b/styles/partials/_script-animations.scss
@@ -1,5 +1,5 @@
 .anim-left-0 {
-    animation: slide-right 1500ms cubic-bezier(.47,.01,.48,1) 1;
+    animation: slide-left 1500ms cubic-bezier(.47,.01,.48,1) 1;
 
 }
 .anim-right-0 {
