--- a/styles/style.css
+++ b/styles/style.css
@@ -163,8 +163,8 @@
 }
 
 .anim-left-0 {
-  -webkit-animation: slide-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
-          animation: slide-right 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+  -webkit-animation: slide-left 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
+          animation: slide-left 1500ms cubic-bezier(0.47, 0.01, 0.48, 1) 1;
 }
 
 .anim-right-0 {
