--- a/styles/partials/_attribution.scss
+++ b/styles/partials/_attribution.scss
@@ -3,6 +3,10 @@
     font-size: 20px;
     text-align: center;
     color: $Dark-Blue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     
     a {
         text-decoration: none;
