--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -62,6 +62,9 @@
         font-size: 28px !important;
         line-height: 35px !important;
     }
+    .attribution {
+        flex-direction: column;
+    }
 }
 @media (max-width: 510px) {
     #quote-text {
